Passage des values entre les pages + page Prix/association

--- a/PushDansMaster.WPF/Pages/SelectPanierGPage.xaml
+++ b/PushDansMaster.WPF/Pages/SelectPanierGPage.xaml
@@ -17,7 +17,7 @@
                     </Style>
                 </Button.Resources>
             </Button>
-            <Label Content="Sélectionnez un panier" Foreground="CornflowerBlue" FontSize="35" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Center"></Label>
+            <Label Content="Sélectionnez un panier" Name="label" Foreground="CornflowerBlue" FontSize="35" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Center"></Label>
 
             <Border CornerRadius="5">
                 <DataGrid HorizontalAlignment="Center" VerticalAlignment="Center" Name="Liste" Foreground="Blue" Padding="30" Width="750" Height="300">
